syntax = "proto3";

option csharp_namespace = "SimpleGrpcService";

package greet;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service WeatherForecast {
    rpc GetWeatherStream (google.protobuf.Empty) returns (stream WeatherData);
  }

message WeatherData{
  google.protobuf.Timestamp dateTimeStamp = 1;
  int32 temperatureC = 2;
  string summary = 3;
}